feat(delete): Cria os endpoints de deleção de turma, atividade e alocação
